# api-python

./: LICENSE  README.md  example_credentials.py  pyproject.toml
econops/: __init__.py  cli.py  client.py
tests/: __init__.py  test_client.py
