[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "econops"
version = "0.1.0"
description = "Econosp API client for economics with statistics and data science "
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EconOps Team", email = "info@econops.com"}
]
keywords = ["api", "statistics", "time-series", "machine-learning", "economics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/econops/api-python"
Documentation = "https://econops.com/docs/python"
Repository = "https://github.com/econops/api-python"
"Bug Tracker" = "https://github.com/econops/api-python/issues"

[project.scripts]
econops = "econops.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["econops*"]

[tool.setuptools.package-data]
econops = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=econops --cov-report=term-missing" 